tests/baselines/reference/functionOverloads29.errors.txt
tests/cases/compiler/functionOverloads29.ts(4,9): error TS2717: No overload expects 0 arguments. The most matching overloads expect 1 arguments.


==== tests/cases/compiler/functionOverloads29.ts (1 errors) ====
    function foo(bar:string):string;
    function foo(bar:number):number;
    function foo(bar:any):any{ return bar }
    var x = foo();
            ~~~~~
!!! error TS2717: No overload expects 0 arguments. The most matching overloads expect 1 arguments.
    